// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Performance always print decimal places 1`] = `
<div>
  <span
    class="makeStyles-performance-3 makeStyles-performance-4"
  >
    1.337,00 %
  </span>
</div>
`;

exports[`Performance format performance 1`] = `
<div>
  <span
    class="makeStyles-performance-1 makeStyles-performance-2"
  >
    13,37 %
  </span>
</div>
`;

exports[`Performance only print 2 decimal places 1`] = `
<div>
  <span
    class="makeStyles-performance-5 makeStyles-performance-6"
  >
    -13,37 %
  </span>
</div>
`;
